--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="site-header" role="banner">
+<header class="site-header">
 
     <div class="wrapper">
       {%- assign default_paths = site.pages | map: "path" -%}
@@ -7,7 +7,7 @@
       
       <a class="site-title" rel="author" href="{{ "/" | relative_url }}">
         {%- if site.logo -%}
-          <img class="logo" src="{{ site.logo | escape }}">
+          <img class="logo" alt="logo" src="{{ site.logo | escape }}">
         {%- endif -%}
         {{ site.title | escape }}
       </a>
