--- a/assets/main.scss
+++ b/assets/main.scss
@@ -27,3 +27,19 @@
 h2 {
     margin-top: 2em;
 }
+
+/* Email form */
+form label {
+    padding: 1em 0;
+    margin: 1em 0;
+}
+input, textarea {
+    width: 100%;
+    min-width: 100%;
+    padding: 1em;
+    margin-bottom: 2em;
+    box-sizing: border-box;
+}
+textarea {
+    height: 15em;
+}
