--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,30 +1,31 @@
 <footer class="site-footer h-card">
-    <data class="u-url" value="{{ "/" | relative_url }}"></data>
-  
+    <data class="u-url" value="{{ site.url | escape }}"></data>
+
     <div class="wrapper">
   
-      <h2 class="footer-heading">{{ site.company | escape }}</h2>
+      <h2 class="footer-heading p-name">{{ site.company | escape }}</h2>
   
       <div class="footer-col-wrapper">
         <div class="footer-col footer-col-1">
-          <ul class="contact-list">
+          <p>{{- site.description | escape -}}</p>
+          <p>{{- site.org_info | escape -}}</p>
+        </div>
+
+        <div class="footer-col footer-col-2">
+          {%- include social.html -%}
+        </div>
+
+        <div class="footer-col footer-col-3">
+          <ul class="footer-menu">
             {%- for path in page_paths -%}
               {%- assign my_page = site.pages | where: "path", path | first -%}
                 {%- if my_page.title -%}
-                  <li class="p-name">
+                  <li>
                     <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
                   </li>
                 {%- endif -%}
             {%- endfor -%}
           </ul>
-        </div>
-  
-        <div class="footer-col footer-col-2">
-          {%- include social.html -%}
-        </div>
-  
-        <div class="footer-col footer-col-3">
-          <p>{{- site.description | escape -}}</p>
         </div>
       </div>
   
